# project_seeds

./: LICENSE  README.md  justfile
full-stack/: .gitignore  README.md  TODO  boot-all.sh  clean-all.sh  init.sh  soft-clean-all.sh
full-stack/backend/: Dockerfile  boot-backend-pod.sh
full-stack/docker-network/: init-internal-network.sh
full-stack/dotcms/: Dockerfile  boot-dotcms.sh  configure-dotcms.sh  create-transfer-package.sh  entrypoint-dotcms-promtail.sh  graphql sandbox  promtail-config.yaml  provision-users.sh  restore-from-package.sh
full-stack/frontend/: Dockerfile  boot-frontend-pod.sh  entrypoint.sh  promtail-config.yaml  supervisord.conf
full-stack/image-cache/: save-images.sh
full-stack/monitoring/: boot-grafana.sh  boot-loki.sh  loki-config.yaml
full-stack/nginx/: promtail-config.yaml  supervisord.conf
renar/: .gitignore  README.md  TODO  boot-all.sh  clean-all.sh
renar/backend/: boot-backend-pod.sh
renar/dotcms/: boot-dotcms.sh  logrotate-dotcms.conf  promtail-config.yaml  readme
renar/frontend/: boot-frontend-pod.sh
renar/image-cache/: erase-images.sh  save-images.sh
renar/monitoring/: boot-grafana.sh  boot-loki.sh  grafana-provision-loki.yaml
renar/monitoring/data/: grafana.db
renar/nginx/: Dockerfile  clean-nginx.sh  promtail-config.yaml  start-nginx.sh
renar/renar/: README.md  TODO  boot-all.sh  clean-all.sh
templates/fastapi-basic/: .gitignore  README.md  justfile  pyproject.toml
templates/fastapi-basic/app/: README.md  health.py  main.py
templates/rust-axum-basic/: .gitignore  Cargo.toml  README.md  justfile
(+575 files in other folders)
