[project]
name = "{{project_name}}"
version = "0.1.0"
description = "A FastAPI project created from basic template"
requires-python = ">=3.8.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "{{project_name}}"
version = "0.1.0"
description = "A FastAPI project created from basic template"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.0.0"
flake8 = "^7.0.0" 